syntax = "proto3";

option csharp_namespace = "AccountSpace";

service AuthService {
  rpc Auth (AuthReq) returns (AuthRes);
}

message AuthReq {
  string username = 1;
  string password = 2;
}

message AuthRes {
  string user_id = 1;
  int32 status_code = 2;
  string message = 3;
}