syntax = "proto3";

option csharp_namespace = "AccountSpace";

service AccountServerService {
	rpc Login (LoginReq) returns (LoginRes);
	rpc Connect (ConnectReq) returns (ConnectRes);
}

message LoginReq {
	string username = 1;
	string password = 2;
}

message LoginRes {
	string user_id = 1;
	int32 status_code = 2;
	string message = 3;
}

message ConnectReq {
	string address = 1;
	int32 port = 2;
}

message ConnectRes {
	string message = 1;
}